vlib/v/checker/tests/unimplemented_interface_h.vv
interface Animal {
	name string
}

struct Cat {}

fn main() {
	mut animals := []Animal{}
	animals << Cat{}
}
